infra/deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: contourguessr
  labels:
    app: api-server
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: "api.contourguessr.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-server
                port: { name: http }
  tls:
    - hosts:
        - "api.contourguessr.org"
      secretName: api-cert
---
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: contourguessr
  labels:
    app: api-server
spec:
  type: ClusterIP
  selector:
    app: api-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: contourguessr
  labels:
    app: api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      name: api-server
      labels:
        app: api-server
    spec:
      containers:
        - name: api-server
          image: ghcr.io/dzfranklin/contourguessr-api:latest
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
